feat: declare JPMS modules for the library, automatic names for the starters (#36)
* feat: declare JPMS modules for the library, automatic names for the starters

push2u-core and push2u-signer-vault become explicit modules —
com.the13haven.push2u and com.the13haven.push2u.signer.vault. The core's
descriptor is three lines (requires java.net.http, requires static
org.jspecify, one exports), which is what ADR-002's zero-dependency
posture buys: an accurate descriptor is cheap to write, and it turns that
posture from an assertion into something the module system checks.
Verified by compiling and running a consumer on the module path with the
JSpecify jar absent at runtime.

The conformance kit moves from com.the13haven.push2u to
com.the13haven.push2u.testkit, and it had to: a package split across two
artifacts cannot be resolved from the module path. Reproduced before
moving it — a consumer with both the core and a kit in the core's package
fails with ResolutionException at boot-layer initialisation. The fixtures
are published, so after a release this move would break every consumer of
the kit.

The two Spring Boot starters stay automatic modules with a fixed
Automatic-Module-Name: Boot's own artifacts are automatic and its
auto-configuration reflects over META-INF/spring imports, which no
descriptor can express. The attribute stops the module name following the
jar file name (push2u.spring.boot.starter).

Checkstyle 13.9.0 cannot parse a module declaration at all — `module foo
{}` fails with "no viable alternative" — and one unparseable file aborts
the task, so module-info.java is excluded from the analysing
configuration and picked up by checkstyleLicenseHeader instead, whose
configuration has no TreeWalker. That keeps the ADR-008 licence header
enforced on the descriptors; verified by stripping one.

ADR-014 records all of it, including why the names are fixed before the
first release rather than after.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* fix: 